test/language/spec/templates/valid/constrained_template.topo
// Constrained template parameter

namespace math {
  public:
    constraint Numeric {
      T add(T a, T b);
      T zero();
    }

    template<typename T : Numeric>
    T sum(T a, T b);
}
