test/language/spec/templates/invalid/unknown_constraint.topo
// TEST: unknown constraint on template parameter
// EXPECT-ERROR: unknown constraint

namespace math {
  public:
    template<typename T : FakeConstraint>
    T normalize(T x, T y);
}
